# scry-home

./: .gitignore  .woodpecker.yml  AGENTS.md  BUILD.md  CLAUDE.md  CODE-REVIEW.md  PROJECT_IDEAS.md  README.md  REPO_ALIGNMENT.md  SOUL.md  biome.json  bootstrap.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
apps/: README.md
apps/astro-web-template/: README.md  package.json
apps/scrybase/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  server.ts  tsconfig.json
apps/web/: .cta.json  README.md  package.json  tsconfig.json  vite.config.ts
docs/: README.md
docs/performance/: README.md
infra/: .env.example  Caddyfile  docker-compose.yml  garage.toml.example
memory/: 2026-03-07.md
openclaw/: AGENTS.md  BACKUPS.md  BOOTSTRAP.md  BUILD.md  CLAUDE.md  HEARTBEAT.md  IDENTITY.md  MAX-CAPABILITIES-PLAYBOOK.md  MEMORY.md  SOUL.md  TOOLS.md  cron-jobs.json  exec-approvals.json
reference/: grimoire-final-review-and-renaming.md  openclaw-issue-candidates.md
reference/cab/: WORKFLOW.md
scripts/: __init__.py  __main__.py  bootstrap.py  bootstrap.ts  check-agent-doc-sync.ts  cli.py  cli.ts  common.py  crypto.py  doctor.py  doctor.ts  lib.py  lib.ts  lighthouse-run.ts  projects-config.ts  projects.config.ts  projects.py  projects_config.py  setup-minio.ts  setup-storage.ts  setup-workstation.ts  setup-zig.ts  setup_ssh_backup.py  setup_ssh_restore.py  setup_storage.py  setup_workstation.py  snapshot.py
utilities/: README.md  setup-glances.py
workstation/: README.md
(+222 files in other folders)
